// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders TertiaryMenu non-visible 1`] = `
<div
  className="sc-bczRLJ evZOWk"
  data-id="menu"
>
  <ul
    className="sc-gsnTZi ekVTqR"
  />
</div>
`;

exports[`renders TertiaryMenu visible 1`] = `
<div
  className="sc-bczRLJ bZgBmQ"
  data-id="menu"
>
  <ul
    className="sc-gsnTZi ekVTqR"
  />
</div>
`;
